@@ -1,3 +1,7 @@
+2017-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCicode.c (geniCodeDerefPtr): Fix bug #2575
+
 2016-12-29 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/wchar.c:
